Made improvement to the animations, topnav active, removed unneccesary tags and nesting
The portfolio pages are still broken and images sometimes load incorrectly. Will be next goal

--- a/Projects/Dissertation.html
+++ b/Projects/Dissertation.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../CSS/topnav.css">
     <link rel="stylesheet" href="../CSS/background.css">
     <link rel="stylesheet" href="../CSS/buttons.css">
-
+    <script src="https://unpkg.com/swup@4"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script>
     // Create a YouTube player when the API is ready
@@ -25,18 +25,18 @@
     }
     </script>
 </head>
-
-<div class="topnav-alignment">
-    <nav class="topnav">
-        <a href="../index.html">Home</a>
-        <a href="../about-me.html">CV</a>
-        <a class="active" href="../portfolio.html">Portfolio</a>
-        <a href="../contact.html">Contact</a>
-    </nav>
-</div>
-
 <body>
-    <div class="main">      
+    <div class="topnav-alignment">
+        <nav class="topnav">
+            <a href="../index.html">Home</a>
+            <a href="../about-me.html">CV</a>
+            <a class="active" href="../portfolio.html">Portfolio</a>
+            <a href="../contact.html">Contact</a>
+        </nav>
+    </div>
+
+
+    <main id="swup" class="main transition-fade">
         <div class=title>
             <h1>Thomas Billett</h1>
         </div>
@@ -77,7 +77,8 @@
 
         </div>
         
-    </div>
+    </main>
+    <script type="module" src ="animations.js"></script>
 </body>
 
 </html>
