--- a/contact.html
+++ b/contact.html
@@ -14,25 +14,26 @@
     <link rel="stylesheet" href="CSS/background.css">
     <link rel="stylesheet" href="CSS/buttons.css">
     <link rel="stylesheet" href="CSS/transitions.css">
-
+    <script src="https://unpkg.com/swup@4"></script>
     <!-- <script defer src="node_modules/swup/dist/Swup."></script>
     <script defer src="script.js"></script> -->
 </head>
 
-<div class="topnav-alignment">
-    <nav class="topnav">
-        <a href="index.html">Home</a>
-        <a href="about-me.html">CV</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a class="active"  href="contact.html">Contact</a>
-    </nav>
-</div>
-<footer class="footer">© 2024 Thomas Billett. All Rights Reserved.</footer>
-
 <body>
-    <main id="swup" class="transition-fade">
-    
-    <div class="main">   
+
+    <div class="topnav-alignment">
+        <nav class="topnav">
+            <a href="index.html">Home</a>
+            <a href="about-me.html">CV</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a class="active"  href="contact.html">Contact</a>
+        </nav>
+    </div>
+
+    <footer class="footer">© 2025 Thomas Billett. All Rights Reserved.</footer>
+
+    <main id="swup" class="main transition-fade">
+
         <div class=title>
             <h1>Contact</h1>
         </div>
@@ -56,9 +57,12 @@
     
             </div>  
         </div>
-        <hr class="hr-with-line-breaks">
-    </div>
-    </main>
-</body>   
 
+        <hr class="hr-with-line-breaks">
+
+    </main>
+
+    <script type="module" src ="animations.js"></script>
+
+</body>   
 </html> 
