Redesigned front page, removed grey colour. Moved project introduction to main page

--- a/index.html
+++ b/index.html
@@ -52,11 +52,39 @@
             <h5>Computing Graduate</h5>
         </div>
 
-
         <hr class="hr-with-line-breaks">
 
+        <section class="portfolio">
+        <h3>Featured Projects</h3>
+        <div class="projects-grid">
 
-        <div class="smallbox l">
+            <article class="project-card featured">
+                <img src="/Images/SolarSpark.png"/>
+                <h3>Solar Spark</h3>
+                <p>Overview or teaser</p>
+                <a href="portfolio/project1.html" class="btn">View Details</a>
+            </article>
+
+            
+            <article class="project-card">
+                <img src="/Images/penumbra.png"/>
+                <h4>Penumbra</h4>
+                <p>Brief description of project 1.</p>
+                <a href="portfolio/project1.html" class="btn">View Details</a>
+            </article>
+
+            <article class="project-card">
+                <img src="/Images/RebindControls.png"/>
+                <h4>Dissertation</h4>
+                <p>Brief description of project 2.</p>
+                <a href="portfolio/project2.html" class="btn">View Details</a>
+            </article>
+
+        <!-- More projects -->
+        </div>
+        </section>
+
+        <!-- <div class="smallbox l">
             <h3><center>Welcome to my Portfolio</center></h3>
 
             <br>
@@ -81,7 +109,7 @@
                 to innovative and captivating game development projects.
                 
             </p>
-        </div>
+        </div> -->
 
         <!-- <hr class="hr-with-line-breaks">
 
