Improved swup animation, removed reduntant css & comments

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         <div class="projects-grid">
 
             <article class="project-card featured">
-                <img src="/Images/SolarSpark.png"/>
+                <img src="/Images/SolarSparkLogo.png"/>
                 <h3>Solar Spark</h3>
                 <p>Overview or teaser</p>
-                <a href="portfolio/project1.html" class="btn">View Details</a>
+                <a href="Projects/SolarSpark.html" class="btn">View Details</a>
             </article>
 
             
@@ -70,14 +70,14 @@
                 <img src="/Images/penumbra.png"/>
                 <h4>Penumbra</h4>
                 <p>Brief description of project 1.</p>
-                <a href="portfolio/project1.html" class="btn">View Details</a>
+                <a href="Projects/Penumbra.html" class="btn">View Details</a>
             </article>
 
             <article class="project-card">
                 <img src="/Images/RebindControls.png"/>
                 <h4>Dissertation</h4>
                 <p>Brief description of project 2.</p>
-                <a href="portfolio/project2.html" class="btn">View Details</a>
+                <a href="Projects/Dissertation.html" class="btn">View Details</a>
             </article>
 
         <!-- More projects -->
