--- a/about-me.html
+++ b/about-me.html
@@ -42,10 +42,10 @@
         <div class="smallbox">
             <h1>Curriculum Vitae</h1>
             <div class="buttoncontainer">
-                <a href="Projects/Thomas Billett CV Games Redacted.pdf" target="_blank" rel="noopener noreferrer">
+                <a href="CV files/Thomas Billett CV Games Redacted.pdf" target="_blank" rel="noopener noreferrer">
                     <button class="downloadbutton">Light CV</button>
                 </a>
-                <!-- <a href="Projects/Thomas Billett CV Dark.pdf" target="_blank" rel="noopener noreferrer">
+                <!-- <a href="CV files/Thomas Billett CV Dark.pdf" target="_blank" rel="noopener noreferrer">
                     <button class="downloadbutton">Dark CV</button>
                 </a> -->
             </div>
@@ -56,7 +56,7 @@
 
     </main>
 
-    <script type="module" src ="animations.js"></script>
+    <script type="module" src ="js/animations.js"></script>
 
 </body>
 </html>
