--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
 
     </main>
 
-    <script type="module" src ="animations.js"></script>
+    <script type="module" src ="js/animations.js"></script>
 
 </body>   
 </html> 
