--- a/Projects/SolarSpark.html
+++ b/Projects/SolarSpark.html
@@ -16,21 +16,7 @@
     <script src="https://unpkg.com/swup@4"></script>
 
     <script src="https://www.youtube.com/iframe_api"></script>
-    <script>
-        // Create a YouTube player when the API is ready
-        function onYouTubeIframeAPIReady() {
-            var playerTrailer = new YT.Player('playerTrailer', {
-                height: '100%',
-                width: '100%',
-                videoId: 'qgrneknSSBU',
-            });       
-            var playerSobek = new YT.Player('playerSobek', {
-                height: '100%',
-                width: '100%',
-                videoId: 'srYHbdRGF7A',
-            });
-        }
-    </script>
+    <script src="/js/youtube-player.js" defer></script>
 </head>
 
 <!-- Topbar with links to other webpages -->
@@ -56,9 +42,6 @@
         <div class="smallbox l">
             <h1>Solar Spark - CaliCat Studios</h1>       
 
-            <a href="../portfolio.html">
-                <button class = "returnbutton">Return</button>
-            </a>
 
             <br>
 
@@ -66,7 +49,7 @@
 
             <!-- YouTube player embed -->
             <div class="player-container">
-                <div id="playerTrailer"></div>
+                <div id="trailerPlayer" data-youtube-id="qgrneknSSBU"></div>
             </div>
 
             <h3>Introduction</h3>
@@ -296,7 +279,7 @@
         </div>
         
     </main>
-    <script type="module" src ="animations.js"></script>
+    <script type="module" src ="js/animations.js"></script>
 </body>
 
 </html>
