--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     </main>
 
-    <script type="module" src ="animations.js"></script>
+    <script type="module" src ="js/animations.js"></script>
 
 </body>
 </html>
