Everyfile has DOCTYPE html at top, changed paths to use relative path instead of absolute

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 <body>
     <div class="topnav-alignment">
         <nav class="topnav">
-            <a class="active" href="index.html">Home</a>
-            <a href="about-me.html">CV</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
+            <a class="active" href="/index.html">Home</a>
+            <a href="/about-me.html">CV</a>
+            <a href="/portfolio.html">Portfolio</a>
+            <a href="/contact.html">Contact</a>
         </nav>
     </div>
 
@@ -51,6 +51,7 @@
             <h1>Thomas Billett</h1>
             <h5>Computing Graduate</h5>
         </div>
+        
 
         <hr class="hr-with-line-breaks">
 
