--- a/Projects/Dissertation.html
+++ b/Projects/Dissertation.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,10 +20,10 @@
 <body>
     <div class="topnav-alignment">
         <nav class="topnav">
-            <a href="../index.html">Home</a>
-            <a href="../about-me.html">CV</a>
-            <a class="active" href="../portfolio.html">Portfolio</a>
-            <a href="../contact.html">Contact</a>
+            <a href="/index.html">Home</a>
+            <a href="/about-me.html">CV</a>
+            <a class="active" href="/portfolio.html">Portfolio</a>
+            <a href="/contact.html">Contact</a>
         </nav>
     </div>
 
@@ -65,7 +66,7 @@
         </div>
         
     </main>
-    <script type="module" src ="/js/animations.js"></script>
+    <script type="module" src ="../js/animations.js"></script>
 </body>
 
 </html>
