--- a/about-me.html
+++ b/about-me.html
@@ -1,4 +1,5 @@
-<html lang="en" class="swup-enabled">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -22,10 +23,10 @@
 <body>
     <div class="topnav-alignment">
         <nav class="topnav">
-            <a href="index.html">Home</a>
-            <a class="active" href="about-me.html">CV</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
+            <a href="/index.html">Home</a>
+            <a class="active" href="/about-me.html">CV</a>
+            <a href="/portfolio.html">Portfolio</a>
+            <a href="/contact.html">Contact</a>
         </nav>
     </div>
 
