--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
-<html lang="en" class="swup-enabled">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -23,10 +24,10 @@
 
     <div class="topnav-alignment">
         <nav class="topnav">
-            <a href="index.html">Home</a>
-            <a href="about-me.html">CV</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a class="active"  href="contact.html">Contact</a>
+            <a href="/index.html">Home</a>
+            <a href="/about-me.html">CV</a>
+            <a href="/portfolio.html">Portfolio</a>
+            <a class="active"  href="/contact.html">Contact</a>
         </nav>
     </div>
 
