--- a/index.html
+++ b/index.html
@@ -59,27 +59,29 @@
         <h3>Featured Projects</h3>
         <div class="projects-grid">
 
-            <article class="project-card featured">
-                <img src="/Images/SolarSparkLogo.png"/>
-                <h3>Solar Spark</h3>
-                <p>Overview or teaser</p>
-                <a href="Projects/SolarSpark.html" class="btn">View Details</a>
-            </article>
+            <a href="./Projects/SolarSpark.html" class="featured">
+                <article class="project-card featured">
+                    <img src="/Images/SolarSparkLogo.png"/>
+                    <h3>Solar Spark</h3>
+                    <p>Overview or teaser</p>
+                </article>
+            </a>
 
-            
-            <article class="project-card">
-                <img src="/Images/penumbra.png"/>
-                <h4>Penumbra</h4>
-                <p>Brief description of project 1.</p>
-                <a href="Projects/Penumbra.html" class="btn">View Details</a>
-            </article>
+            <a href="./Projects/Penumbra.html" class="project-card">
+                <article class="project-card">
+                    <img src="/Images/penumbra.png"/>
+                    <h4>Penumbra</h4>
+                    <p>Brief description of project 1.</p>
+                </article>
+            </a>
 
-            <article class="project-card">
-                <img src="/Images/RebindControls.png"/>
-                <h4>Dissertation</h4>
-                <p>Brief description of project 2.</p>
-                <a href="Projects/Dissertation.html" class="btn">View Details</a>
-            </article>
+            <a href="./Projects/Dissertation.html" class="project-card">
+                <article class="project-card">
+                    <img src="/Images/RebindControls.png"/>
+                    <h4>Dissertation</h4>
+                    <p>Brief description of project 2.</p>
+                </article>
+            </a>
 
         <!-- More projects -->
         </div>
