Improved title, created more consistent design across pages. Fixed project card scaling. Removed white line breaks

--- a/Projects/SolarSpark.html
+++ b/Projects/SolarSpark.html
@@ -34,18 +34,11 @@
 
     <main id="swup" class="main transition-fade">
         <div class=title>
-            <h1>Thomas Billett</h1>      
+            <h1>Solar Spark</h1>
+            <h5>CaliCat Studios</h5>      
         </div>
-
-        <hr class="hr-with-line-breaks">
-
         <!-- Game introduction-->
         <div class="smallbox l">
-            <h1>Solar Spark - CaliCat Studios</h1>       
-
-
-            <br>
-
             <h3>Grade Awarded - 1st</h3>
 
             <!-- YouTube player embed -->
@@ -78,8 +71,6 @@
 
         </div>
 
-        <hr class="hr-with-line-breaks">
-
         <!-- Roles and contributions box -->
         <div class="smallbox l">
             <h3>My Roles</h3>
@@ -110,8 +101,6 @@
                     <i>A more detailed version of my roles and contributions is further below</i>
                 </p>
         </div>
-
-        <hr class="hr-with-line-breaks">
 
         <!-- Detailed AI dev box: -->
         <div class="smallbox l">
@@ -166,8 +155,6 @@
             </p>
         </div>
 
-        <hr class="hr-with-line-breaks">
-
         <!-- Input system dev box: -->
         <div class="smallbox l">
             <h3>Input System</h3>
@@ -199,8 +186,6 @@
             </p>
         </div>
 
-        <hr class="hr-with-line-breaks">
-
         <!-- Detailed camera dev info: -->
         <div class="smallbox l">
             <h3>Camera</h3>
@@ -209,21 +194,6 @@
                 fast and responsive, in alignment with the fast paced hack and slash combat system. We drew inspiration
                 from games such as <i>Devil May Cry 5</i> and <i>NieR: Automata</i>.
             </p>
-
-            <!-- <div class="flex-container">
-                <div class="image">
-                    <img src="../images/nier.jpg">
-                </div>
-                <div class="image">
-                    <img src="../images/nier.jpg">
-
-                </div>
-                <div class="image">
-                    <img src="../images/dmc5.jpg">
-                </div>
-                <div class="image">
-                    <img src="../images/dmc5.jpg">
-                </div> -->
 
                 <div class="image-wrapper">
                     <img id="grid" src="../Images/nier.jpg">
@@ -280,7 +250,7 @@
         </div>
         
     </main>
+    
     <script type="module" src ="../js/animations.js"></script>
 </body>
-
 </html>
