--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="CSS/background.css">
     <link rel="stylesheet" href="CSS/buttons.css">
     <link rel="stylesheet" href="CSS/transitions.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <script src="https://unpkg.com/swup@4"></script>
 
     <!-- <script defer src="node_modules/swup/dist/Swup.modern.js"></script>
@@ -52,36 +54,36 @@
             <h5>Computing Graduate</h5>
         </div>
         
-
-        <hr class="hr-with-line-breaks">
-
         <section class="portfolio">
-        <h3>Featured Projects</h3>
         <div class="projects-grid">
+            <h3>Featured Projects</h3>
 
-            <a href="./Projects/SolarSpark.html" class="featured">
-                <article class="project-card featured">
+            
+            <article class="project-card featured">
+                <a href="./Projects/SolarSpark.html" class="featured">
                     <img src="/Images/SolarSparkLogo.png"/>
-                    <h3>Solar Spark</h3>
-                    <p>Overview or teaser</p>
-                </article>
-            </a>
+                </a>
+                <h3>Solar Spark</h3>
+                <p>3rd year project. A fast paced hack n slash</p>
+            </article>
 
-            <a href="./Projects/Penumbra.html" class="project-card">
-                <article class="project-card">
+
+
+            <article class="project-card">
+                <a href="./Projects/Penumbra.html" class="project-card">
                     <img src="/Images/penumbra.png"/>
-                    <h4>Penumbra</h4>
-                    <p>Brief description of project 1.</p>
-                </article>
-            </a>
+                </a>
+                <h3>Penumbra</h3>
+                <p>Brief description of project 1.</p>
+            </article>
 
-            <a href="./Projects/Dissertation.html" class="project-card">
-                <article class="project-card">
+            <article class="project-card">
+                <a href="./Projects/Dissertation.html" class="project-card">
                     <img src="/Images/RebindControls.png"/>
-                    <h4>Dissertation</h4>
-                    <p>Brief description of project 2.</p>
-                </article>
-            </a>
+                </a>
+                <h3>Dissertation</h3>
+                <p>Brief description of project 2.</p>
+            </article>
 
         <!-- More projects -->
         </div>
@@ -114,9 +116,8 @@
             </p>
         </div> -->
 
-        <!-- <hr class="hr-with-line-breaks">
 
-        <div class="smallbox l">
+        <!-- <div class="smallbox l">
             <p class="intro">
                 Collaborating with my peers from diverse disciplines within the game development process has been a fundamental part of my degree, 
                 fostering my ability to seamlessly work alongside individuals with varying skill sets. My proficiency lies in C#, 
@@ -124,7 +125,6 @@
             </p>
         </div>
 
-        <hr class="hr-with-line-breaks">
 
         <div class="smallbox l">
             <p class="intro">
@@ -133,9 +133,6 @@
                 to innovative and captivating game development projects.
             </p>
         </div> -->
-
-        <hr class="hr-with-line-breaks">
-
     </main>
 
     <script type="module" src ="js/animations.js"></script>
