--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <img src="/Images/SolarSparkLogo.png"/>
                 </a>
                 <h3>Solar Spark</h3>
-                <p>3rd year project. A fast paced hack n slash</p>
+                <p>3rd year project. A fast paced hack n slash set in a solarpunk setting. My contributions were enemy AI, input system, camera, menu and build creation. </p>
             </article>
 
 
